11767 mpt_sas hangs after config header request timeout Reviewed by: Robert Mustacchi <rm+illumos@fingolfin.org> Reviewed by: Jerry Jelinek <jerry.jelinek@joyent.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Andy Giles <illumos@ang.homedns.org> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Dan McDonald <danmcd@joyent.com>